--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,20 +5,70 @@
 .header {
     background: white;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
+    flex-direction: column;
+    margin: 20px 10px;
+
+    @media (--md-viewport) {
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        margin: 30px 0;
+    }
 }
 
 .nav {
-    margin-right: var(--title-width);
-    padding: 25px;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 150px; /* 30px per link */
+    padding: 0 10px;
+    transition: all 0.3s;
+    overflow: hidden;
+
+    @media (--under-md-viewport) {
+        margin-top: 10px;
+        margin-left: 60px;
+
+        &:not(.openNav) {
+            height: 0;
+            opacity: 0;
+        }   
+    }
+
+    @media (--md-viewport) {
+        flex-direction: row;
+        height: auto;
+        width: 100%;
+        max-width: 550px;
+        margin-right: var(--title-width);
+    }
+}
+
+.menuToggle {
+    background: khaki;
+    border-width: 0 6px 6px;
+    border-style: double;
+    border-color: lemonchiffon;
+    box-shadow: 0 0 5px 1px var(--shadow-color);
+    position: sticky;
+    height: 60px;
+    width: 50px;
+    margin: -20px 0 -50px;
+    padding-top: 20px;
+
+    & svg {
+        fill: ivory;
+    }
+
+    @media (--md-viewport) {
+        display: none;
+    }
 }
 
 .link {
     text-decoration: none;
     text-transform: uppercase;
-    margin: 0 20px;
 }
 
 .active::before {
@@ -29,4 +79,9 @@
     font-family: 'Special Elite', serif;
     font-size: 50px;
     width: var(--title-width);
+    margin: 0 30px;
+
+    @media (--under-md-viewport) {
+        margin-left: 60px;
+    }
 }
