--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,14 +1,10 @@
-:root {
-    --title-width: 160px;
-}
-
 .header {
     background: white;
     display: flex;
     flex-direction: column;
     margin: 20px 10px;
 
-    @media (--md-viewport) {
+    @media (--lg-viewport) {
         flex-direction: row;
         justify-content: center;
         align-items: center;
@@ -26,22 +22,22 @@
     transition: all 0.3s;
     overflow: hidden;
 
-    @media (--under-md-viewport) {
+    @media (--under-lg-viewport) {
         margin-top: 10px;
         margin-left: 60px;
 
         &:not(.openNav) {
             height: 0;
             opacity: 0;
-        }   
+        }
     }
 
-    @media (--md-viewport) {
+    @media (--lg-viewport) {
         flex-direction: row;
         height: auto;
         width: 100%;
         max-width: 550px;
-        margin-right: var(--title-width);
+        margin-right: 151px;
     }
 }
 
@@ -56,12 +52,13 @@
     width: 50px;
     margin: -20px 0 -50px;
     padding-top: 20px;
+    outline: 0;
 
     & svg {
         fill: ivory;
     }
 
-    @media (--md-viewport) {
+    @media (--lg-viewport) {
         display: none;
     }
 }
@@ -78,10 +75,14 @@
 .meow {
     font-family: 'Special Elite', serif;
     font-size: 50px;
-    width: var(--title-width);
-    margin: 0 30px;
+    text-decoration: none;
+    margin-right: 30px;
 
-    @media (--under-md-viewport) {
+    &::before {
+        display: none;
+    }
+
+    @media (--under-lg-viewport) {
         margin-left: 60px;
     }
 }
