--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -127,10 +127,10 @@ blockquote *:last-child {
         flex: 50vh;
         align-self: center;
         width: 100%;
-        padding: 20px;
+        padding:  20px 20px 10%;
 
         @media (--md-viewport) {
-            padding: 30px;
+            padding: 30px 30px 10%;
         }
 
         @media (--lg-viewport) {
@@ -144,5 +144,29 @@ blockquote *:last-child {
         @media (--max-viewport) {
             max-width: 1400px;
         }
+
+        & div:first-child {
+            display: none;
+        }
+    }
+}
+
+.home {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    & .ace-line {
+        display: block;
+        text-align: center;
+
+        & span {
+            line-height: 2;
+        }
+    }
+
+    & h1 span {
+        font-size: 2.5rem;
     }
 }
