--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -3,8 +3,6 @@
 @custom-media --sm-viewport (min-width: 576px);
 @custom-media --md-viewport (min-width: 768px);
 @custom-media --lg-viewport (min-width: 992px);
-@custom-media --xl-viewport (min-width: 1200px);
-@custom-media --max-viewport (min-width: 1600px);
 @custom-media --under-lg-viewport (max-width: 991px);
 
 :root {
@@ -136,18 +134,6 @@ blockquote *:last-child {
         @media (--lg-viewport) {
             max-width: 960px;
         }
-
-        @media (--xl-viewport) {
-            max-width: 1140px;
-        }
-
-        @media (--max-viewport) {
-            max-width: 1400px;
-        }
-
-        & .ace-line:first-child {
-            display: none;
-        }
     }
 }
 
@@ -156,19 +142,19 @@ blockquote *:last-child {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-size: 1.2rem;
 
     & .ace-line {
         display: block;
         text-align: center;
-        font-size: 1.2rem;
+
+        &:first-child span {
+            font-size: 2.5rem;
+        }
 
         & span {
             line-height: 2;
         }
-    }
-
-    & h1 span {
-        font-size: 2.5rem;
     }
 }
 
@@ -190,5 +176,79 @@ blockquote *:last-child {
 
     & .ace-line {
         flex: 1 0 51%;
+    }
+}
+
+.resume {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    & .ace-line:first-child {
+        font-size: 1.5rem;
+        line-height: 1.5rem;
+        text-align: center;
+        padding: 0 30px 30px;
+        position: relative;
+
+        &::before {
+            content: open-quote;
+            left: 0;
+        }
+        &::after {
+            content: close-quote;
+            right: 0;
+        }
+
+        &::before,
+        &::after {
+            color: khaki;
+            font-size: 6rem;
+            font-family: 'Special Elite', serif;
+            position: absolute;
+            top: 0;
+            z-index: -1;
+        }
+    }
+
+    & .ace-line span a[href*='resume'] {
+        background: rgba(240, 230, 140, 0.15);
+        color: #d8cf7e;
+        font-size: 1.2rem;
+        text-decoration: none;
+        border: 2px solid rgba(240, 230, 140, 0.15);
+        border-radius: 5px;
+        padding: 15px;
+        transition: all 0.3s;
+
+        & svg {
+            width: 25px;
+            height: 34px;
+            margin: -5px 1ch -10px -5px;
+        }
+
+        &::before {
+            display: none;
+        }
+
+        @media (--lg-viewport) {
+            &:hover {
+                background: rgba(240, 230, 140, 0.5);
+                color: white;
+                text-shadow: 0 0 10px #d8cf7e;
+            }
+        }
+    }
+}
+
+.about {
+    font-size: 1.2rem;
+
+    @media (--md-viewport) {
+        & #bio {
+            column-count: 2;
+            column-fill: balance;
+        }
     }
 }
