change khaki to gold

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -42,7 +42,7 @@
 }
 
 .menuToggle {
-    background: khaki;
+    background: gold;
     border-width: 0 6px 6px;
     border-style: double;
     border-color: lemonchiffon;
