--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -203,7 +203,7 @@ blockquote *:last-child {
 
         &::before,
         &::after {
-            color: khaki;
+            color: gold;
             font-size: 6rem;
             font-family: 'Special Elite', serif;
             position: absolute;
@@ -212,12 +212,12 @@ blockquote *:last-child {
         }
     }
 
-    & .ace-line span a[href*='resume'] {
-        background: rgba(240, 230, 140, 0.15);
-        color: #d8cf7e;
+    & .ace-line span a[href*='esume'] {
+        background: rgba(255, 240, 90, 0.2);
+        color: gold;
         font-size: 1.2rem;
         text-decoration: none;
-        border: 2px solid rgba(240, 230, 140, 0.15);
+        border: 2px solid rgba(255, 240, 90, 0.25);
         border-radius: 5px;
         padding: 15px;
         transition: all 0.3s;
@@ -226,6 +226,7 @@ blockquote *:last-child {
             width: 25px;
             height: 34px;
             margin: -5px 1ch -10px -5px;
+            box-shadow: -2px 2px 4px -4px gold;
         }
 
         &::before {
@@ -234,9 +235,7 @@ blockquote *:last-child {
 
         @media (--lg-viewport) {
             &:hover {
-                background: rgba(240, 230, 140, 0.5);
-                color: white;
-                text-shadow: 0 0 10px #d8cf7e;
+                background: rgba(255, 240, 90, 0.5);
             }
         }
     }
