--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -22,6 +22,7 @@
     align-self: center;
     background: black;
     color: white;
+    font-size: 0.8rem;
     line-height: 1.5;
     letter-spacing: 0.1rem;
     text-align: center;
