--- a/src/components/admin/Admin.css
+++ b/src/components/admin/Admin.css
@@ -6,11 +6,17 @@
     background-color: var(--999cc-10);
     font-size: 1.5rem;
     position: relative;
+    width: 100%;
+    height: 90px;
+
+    @media (--under-lg-viewport) {
+        margin: 80px 0 -80px;
+    }
 
     &::before {
         content: ' ';
         display: block;
-        background-color:  var(--999cc-10);
+        background-color: var(--999cc-10);
         width: 0;
         height: 100%;
         transition: width 65000ms linear; /* match useLayoutEffect */
@@ -19,8 +25,11 @@
     }
 
     & button {
-        background-color:  transparent;
-        border-bottom: 1px solid var(--999cc-10);
+        background-color: transparent;
+        border: 0;
+        border-width: 1px 0;
+        border-color: var(--999cc-10);
+        border-style: solid;
         color: #9999cc;
         font-size: inherit;
         font-weight: 500;
