--- a/src/components/admin/Admin.css
+++ b/src/components/admin/Admin.css
@@ -9,7 +9,7 @@
     width: 100%;
     height: 90px;
 
-    @media (--under-lg-viewport) {
+    @media (--under-md-viewport) {
         margin: 80px 0 -80px;
     }
 
