--- a/src/components/footer/social/Social.css
+++ b/src/components/footer/social/Social.css
@@ -11,19 +11,15 @@
 
 .handle {
     color: darkgray;
-    display: inline-block;
-    width: 100px;
-}
-
-.email .handle {
-    text-align: right;
+    display: block;
+    margin: 0 -50px;
 }
 
 .socialLink {
     text-decoration: none;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
+    padding: 0 10px;
+    margin: 0 10px;
 
     &::before {
         display: none;
@@ -32,7 +28,6 @@
     & svg {
         width: 30px;
         height: 30px;
-        margin: 0 10px;
     }
 
     &:not(:hover) {
