--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -5,7 +5,7 @@
     width: 100%;
     z-index: 1;
 
-    @media (--lg-viewport) {
+    @media (--md-viewport) {
         position: static;
         margin: 30px 0;
     }
@@ -19,10 +19,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 200px; /* 40px per link */
+    height: 160px; /* 40px per link */
     transition: all 0.3s;
 
-    @media (--under-lg-viewport) {
+    @media (--under-md-viewport) {
         background: white;
         align-items: flex-start;
         padding: 0 85px 20px;
@@ -34,10 +34,11 @@
         }
     }
 
-    @media (--lg-viewport) {
+    @media (--md-viewport) {
         flex-direction: row;
         height: auto;
-        width: 550px;
+        width: 45%;
+        max-width: 400px;
         margin: 0 auto;
     }
 }
@@ -58,7 +59,7 @@
         fill: ivory;
     }
 
-    @media (--lg-viewport) {
+    @media (--md-viewport) {
         display: none;
     }
 }
@@ -81,7 +82,7 @@
         display: none;
     }
 
-    @media (--lg-viewport) {
+    @media (--md-viewport) {
         position: absolute;
         top: 7px;
         left: 40px;
