--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Heebo|Special+Elite&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Abel|Heebo|Special+Elite&display=swap');
 
 @custom-media --sm-viewport (min-width: 576px);
 @custom-media --md-viewport (min-width: 768px);
@@ -96,7 +96,7 @@ iframe {
 #gatsby-focus-wrapper {
     display: flex;
     flex-direction: column;
-    align-items:  center;
+    align-items: center;
     min-height: 100vh;
 
     & main {
@@ -117,15 +117,22 @@ iframe {
             font-size: 1.2rem;
         }
 
-        & .ace-line > span {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
+        & .ace-line {
+            text-align: center;
 
-            @media (--under-sm-viewport) {
-                & img {
-                    max-width: 95% !important;
+            & h1,
+            & h2,
+            & h3 {
+                & span {
+                    font-family: 'Abel', sans-serif;
+                }
+            }
+
+            & > span {
+                @media (--under-sm-viewport) {
+                    & img {
+                        max-width: 95% !important;
+                    }
                 }
             }
         }
