--- a/src/pages/styles/favorites.css
+++ b/src/pages/styles/favorites.css
@@ -1,9 +1,15 @@
 .favorites {
     & .ace-line ul {
-        max-width: 300px;
+        max-width: 70%;
+        margin-left: 15% !important;
 
         @media (--lg-viewport) {
-            margin-left: 36% !important;
+            max-width: 50%;
+            margin-left: 33% !important;
+        }
+
+        & li {
+            text-align: left;
         }
     }
 }
