--- a/src/components/layout/Layout.css
+++ b/src/components/layout/Layout.css
@@ -45,7 +45,8 @@ progress {
     vertical-align: baseline;
 }
 
-a {
+a,
+button.tooltip {
     color: inherit;
     display: inline-block;
     padding: 0 5px;
@@ -68,6 +69,56 @@ a {
             width: 100%;
             transition: width 0.3s;
         }
+    }
+}
+
+a[target] {
+    text-decoration: underline;
+}
+
+button.tooltip {
+    background: none;
+    border: 0;
+    font: inherit;
+    font-weight: bold;
+    text-decoration: none;
+
+    & span:first-of-type {
+        border: 5px solid transparent;
+        border-top-color: black;
+        top: -20%;
+    }
+
+    & span {
+        color: white;
+        display: block;
+        font-size: 0.9rem;
+        font-style: normal;
+        opacity: 0;
+        position: absolute;
+        left: 50%;
+        top: -115%;
+        transform: translate(-50%, 5px);
+        transition: opacity 250ms, transform 250ms;
+        width: max-content;
+
+        &:nth-of-type(2) {
+            background: black;
+            padding: 3px 5px;
+        }
+
+        & a::before {
+            display: none;
+        }
+    }
+
+    &:focus {
+        outline: none;
+    }
+
+    &:hover span {
+        opacity: 1;
+        transform: translate(-50%, 0px);
     }
 }
 
